# prj-templates

./: .gitignore  README.md
c-arm-meson/: README.md  cross-file.txt  meson.build  start_qemu.sh
c-arm-meson/src/asm/: startup.s
c-meson/: README.md  meson.build
c-meson/src/: main.c
esp-prj/: Dockerfile  README.md  setup.sh  setup_docker.sh  setup_env.sh
pico-prj/: Dockerfile  Makefile  setup.sh  setup_docker.sh  setup_env.sh
pico-prj/firmware/: CMakeLists.txt  main.c
pico-prj/src/: CMakeLists.txt
zephyr-prj/: Dockerfile  setup_docker.sh  setup_env.sh
